--- a/packages/react-utils/test/config/index-expected.html
+++ b/packages/react-utils/test/config/index-expected.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#121212" />
     <title>test</title>
   </head>
-  <body style="background-color: #121212" CONFIG_VAR_1="" CONFIG_ANOTHER_VAR="">
+  <body style="background-color: #121212" CONFIG_VAR_1="test" CONFIG_ANOTHER_VAR="">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
